--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 
 archivesBaseName = "scrabble"
 version = "1.0"
-mainClassName "Main"
+mainClassName = "Main"
 
 repositories {
   mavenCentral()
@@ -11,5 +11,5 @@ repositories {
 
 dependencies {
   compile group: 'com.sparkjava', name: 'spark-core', version: '2.1'
-  testCompile group: 'junit', name: "junit', version: '4.+'
+  testCompile group: 'junit', name: 'junit', version: '4.+'
 }
